# webmanageufw

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  crypto.py  db.py  models.py  routes.py  ssh.py
app/services/: fail2ban.py  ufw.py
app/static/: style.css
app/templates/: base.html  edit_server.html  index.html  login.html  server_detail.html
docs/plans/: 2026-07-05-webmanageufw-mvp.md
tests/: test_app.py  test_crypto.py  test_parsers.py
